cleaning up some warnings

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Ceazors Vaults" />
     <meta property="og:description" content="The Sandwich Machine" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.secretsandwich.xyz/" />
+    <meta property="og:url" content="https://www.ceazorvaults.xyz/" />
     <meta property="og:image" content="https://www.secretsandwich.xyz/static/media/logo.2babf436.png" />
 
     <script type="text/javascript">
